@@ -6,7 +6,8 @@
 [moddesc {Tcl Math Library}]
 [titledesc {Probabilistic optimisation methods}]
 [category  Mathematics]
-[require Tcl 8.5]
+[require Tcl 8.6]
+[require TclOO]
 [require math::probopt [vset VERSION]]
 [description]
 [para]
