@@ -5,7 +5,7 @@
 [moddesc {Tcl Math Library}]
 [titledesc {Quasi-random points for integration and Monte Carlo type methods}]
 [category  Mathematics]
-[require Tcl 8.5]
+[require Tcl 8.6]
 [require TclOO]
 [require math::quasirandom [vset VERSION]]
 [description]
